[NR-109305] Resolve map upload task dependency errors
Gradle dependency check was getting hung-up on unnecessary output
of map upload task.

Refactor also covers NR-96423